<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TimePicker
        android:id="@+id/tp_detail_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:timePickerMode="spinner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_detail_memo"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <EditText
            android:id="@+id/et_detail_memo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_marginLeft="24dp"
            android:hint="memo here" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_detail_volume"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <SeekBar
            android:id="@+id/sb_volume"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="50"
            android:layout_marginLeft="16dp"
            android:progressTint="@color/colorPrimary"
            android:thumbTint="@color/colorPrimary"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingTop="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_detail_way"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"/>
        <ToggleButton
            android:id="@+id/tb_sound"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="8dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/string_detail_sound"
            android:textOff="@string/string_detail_sound"/>
        <ToggleButton
            android:id="@+id/tb_vibrate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textOn="@string/string_detail_vibrate"
            android:textOff="@string/string_detail_vibrate"/>
    </LinearLayout>

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:id="@+id/tab_repeat"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/string_detail_day_of_week"
                        android:textSize="14sp"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp"
                        android:textColor="@android:color/darker_gray"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ToggleButton
                            android:id="@+id/tb_day_sun"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="일"
                            android:textOff="일"/>
                        <ToggleButton
                            android:id="@+id/tb_day_mon"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="월"
                            android:textOff="월"/>
                        <ToggleButton
                            android:id="@+id/tb_day_tue"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="화"
                            android:textOff="화"/>
                        <ToggleButton
                            android:id="@+id/tb_day_wed"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="수"
                            android:textOff="수"/>
                        <ToggleButton
                            android:id="@+id/tb_day_thd"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="목"
                            android:textOff="목"/>
                        <ToggleButton
                            android:id="@+id/tb_day_fri"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="금"
                            android:textOff="금"/>
                        <ToggleButton
                            android:id="@+id/tb_day_sat"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textOn="토"
                            android:textOff="토"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tab_once"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingLeft="8dp"
                        android:paddingTop="8dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/string_detail_date"
                            android:textSize="14sp"
                            android:textColor="@android:color/darker_gray"/>
                        <ImageButton
                            android:id="@+id/ib_calendar"
                            android:layout_width="16dp"
                            android:layout_height="16dp"
                            android:layout_marginLeft="16dp"
                            android:foregroundGravity="center_vertical"
                            android:background="@drawable/calendar_icon"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_date"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:paddingTop="8dp"
                        android:paddingLeft="8dp"
                        android:text="2017/01/23(월)"
                        android:textSize="20dp"/>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

    </TabHost>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_detail_save" />
        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_detail_cancel" />
    </LinearLayout>
</LinearLayout>